--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 </script>
 <table>
 	<tr>
-		<thead>roll number</thead>
-		<thead>name</thead>
+		<th>roll number</th>
+		<th>name</th>
 	</tr>
 	<tr>
 		<td>1</td>
