--- a/main.html
+++ b/main.html
@@ -10,19 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<table>
+<table >
+	<thead>
 	<tr>
 		<th>roll number</th>
-		<th>name</th>
+		<th>name </th>
+	</tr>
+		</thead>
+	<tbody>
+	<tr>
+		<td>10</td>
+		<td>Navanath</td>
 	</tr>
 	<tr>
-		<td>1</td>
-		<td>navanath</td>
+		<td>10</td>
+		<td>Navanath</td>
 	</tr>
-	<tr>
-		<td>2</td>
-		<td>rohit</td>
-	</tr>
+		</tbody>
 </table>
 </body>
 
